2007-10-01  Eric Seidel  <eric@webkit.org>

Reviewed by Oliver Hunt.

        SVG Subresources will not be saved when creating WebArchives
        http://bugs.webkit.org/show_bug.cgi?id=15280

        Implement _subresourceURLs methods for more SVGElement types
        more such methods will be needed as we add support for other
        external references (such as use, mpath, tref, etc.)

        * DOM/WebDOMOperations.mm:
        (-[DOMSVGScriptElement _subresourceURLs]): added.
        (-[DOMSVGCursorElement _subresourceURLs]): added.
        (-[DOMSVGFEImageElement _subresourceURLs]): added.



Canonical link: https://commits.webkit.org/20451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26461 268f45cc-cd09-0410-ab3c-d52691b4dbfc